--- a/app/templates/calculator.html
+++ b/app/templates/calculator.html
@@ -12,7 +12,7 @@
 
     <h1>HTML Form</h1>
 
-    <form action="/basicform" method="post">
+    <form action="/calculator" method="POST">
         <label for="value1">Value 1:</label><br>
         <input type="text" id="value1" name="value1" value="1"><br>
         <label for="value2">Value 2:</label><br>
@@ -31,9 +31,12 @@
             <input type="radio" name="operation" id="multiplication" value="multiplication">
             <label for="multiplication">multiplication</label>
           </div>
+          <div>
+            <input type="radio" name="operation" id="division" value="division">
+            <label for="division">division</label>
+          </div>
         </fieldset>
 
         <input type="submit" value="Submit">
     </form>
-    <a href="/good/1.0/2.0">One Plus Two Good</a><br><a href="/bad/1/2">One Plus Two Bad</a>
 {% endblock %}
