Imported 4 templates from project 2 & fixed website style

--- a/app/templates/basic_table.html
+++ b/app/templates/basic_table.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<h1 style="text-align: center;">History</h1>
   <table id="data" class="table table-striped">
     <thead>
       <tr>
