--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,12 +11,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/web.css') }}"/>
+
 
     <title>Hello, world!</title>
 
 </head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body> <!-- style="margin-left: 20px;" style="margin-top: 20px;"-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 100%">
     <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,6 +34,18 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/history">History</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/aaa_testing">AAA Testing</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/oop_principles">OOP Principles</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/oop_glossary">OOP Glossary</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/soc">SoC</a>
             </li>
         </ul>
     </div>
@@ -49,10 +63,10 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 
-<div id="footer">
+<footer id="footer" style="width: 100%;text-align: center;position:absolute;">
     {% block footer %}
-        &copy; Copyright 2021 by <a href="#https://github.com/tlr24/calc_project">Talaar Rastguelenian</a>.
+        &copy; Copyright 2021 by <a href="https://github.com/tlr24/calc_project">Talaar Rastguelenian</a>.
     {% endblock %}
-</div>
+</footer>
 </body>
 </html>
