--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,7 @@
     </style>
 {% endblock %}
 {% block content %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/azure.css') }}"/>
     <h1>Index</h1>
     <p class="important">
       Welcome to my awesome homepage.
