Updated template layouts, added clear history btn, track divide by zero, update file_writer

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -62,7 +62,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 
-<footer id="footer" style="width: 100%;text-align: center;position:absolute;">
+<footer id="footer" style="width: 100%;padding: 10px 10px 10px 10px;text-align: center;absolute:fixed;bottom: 0;">
     {% block footer %}
         &copy; Copyright 2021 by <a href="https://github.com/tlr24/calc_project">Talaar Rastguelenian</a>.
     {% endblock %}
