--- a/app/templates/calculator2.html
+++ b/app/templates/calculator2.html
@@ -9,6 +9,8 @@
     </style>
 {% endblock %}
 {% block content %}
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <main class="px-3" style="text-align: center"><br>
     <h1>My Calculator</h1>
      {% if error %}
          <div class="alert alert-danger error" role="alert">
@@ -16,13 +18,12 @@
         </div>
       {% endif %}
   <div class="mb-3 row">
-
     <form action="/calculator" method="POST">
         <label for="value1" class="col-sm-2 col-form-label">Value 1:</label><br>
         <input type="text" id="value1" name="value1" value="1"><br>
         <label for="value2" class="col-sm-2 col-form-label">Value 2:</label><br>
         <input type="text" id="value2" name="value2" value="2"><br>
-        <fieldset>
+        <fieldset><br>
         <legend>Operation</legend>
           <div>
             <input type="radio" name="operation" id="addition" value="addition" checked>
@@ -41,8 +42,10 @@
             <label for="division">division</label>
           </div>
         </fieldset>
-
+        <br>
         <input type="submit" value="Submit">
     </form>
   </div>
+    </main>
+</div>
 {% endblock %}
