Fixed typo in index.html, commented out some not used code

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <main class="px-3" style="text-align: center">
     <h1>Welcome!<br>This website contains various tutorials, articles, and resources that teach how to use a variety of technologies. </h1></h1>
-    <p class="lead">Click below for theA calculator.</p>
+    <p class="lead">Click below for the calculator.</p>
     <p class="lead">
       <a href="/calculator" class="btn btn-lg btn-secondary fw-bold border-dark bg-dark">Go to Calculator</a>
     </p>
