--- a/app/templates/calculator2.html
+++ b/app/templates/calculator2.html
@@ -20,9 +20,9 @@
   <div class="mb-3 row">
     <form action="/calculator" method="POST">
         <label for="value1" class="col-sm-2 col-form-label">Value 1:</label><br>
-        <input type="text" id="value1" name="value1" value="1"><br>
+        <input type="number" id="value1" name="value1" value="1"><br>
         <label for="value2" class="col-sm-2 col-form-label">Value 2:</label><br>
-        <input type="text" id="value2" name="value2" value="2"><br>
+        <input type="number" id="value2" name="value2" value="2"><br>
         <fieldset><br>
         <legend>Operation</legend>
           <div>
