Update templates to have correct titles

--- a/app/templates/OOPprinciples.html
+++ b/app/templates/OOPprinciples.html
@@ -1,5 +1,6 @@
 <!doctype html>
 {% extends "base.html" %}
+{% block title %}OOP Principles{% endblock %}
 {% block content %}
 <html lang="en" class="h-100">
   <head>
