--- a/app/templates/basic_table.html
+++ b/app/templates/basic_table.html
@@ -3,6 +3,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>
 </head>
+{% block title %}History{% endblock %}
 {% block content %}
 <br><h1 style="text-align: center;">History</h1>
 <div style="text-align: center;">
