--- a/app/templates/OOPglossary.html
+++ b/app/templates/OOPglossary.html
@@ -1,5 +1,6 @@
 <!doctype html>
 {% extends "base.html" %}
+{% block title %}OOP Glossary{% endblock %}
 {% block content %}
 <html lang="en" class="h-100">
   <head>
