--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Index{% endblock %}
+{% block title %}Result{% endblock %}
 {% block head %}
     {{ super() }}
     <style type="text/css">
