--- a/app/templates/OOPprinciples.html
+++ b/app/templates/OOPprinciples.html
@@ -103,7 +103,7 @@
     Abstraction focuses on hiding the internal implementations of a process or method from the user. <br><br>
 	An example of abstraction in our calculator program is found in the calculator class. 
 	In the calculator class, there are simple methods for basic calculator operations including <code>add_numbers</code>, <code>subtract_numbers</code>, <code>multiple_numbers</code>, and <code>divide_numbers</code>. <br><br>
-	<img src="pictures/abstract.jpg" alt="abstract" class="center" style="width:100%;"><br>
+	<img src="{{ url_for('static', filename='images/abstract.jpg') }}" alt="abstract" class="center" style="width:100%;"><br>
 	The actual code that does all the calculating for these methods is hidden behind the <code>add_addition_calculation</code> (etc.) methods found in the Calculations class which then inherits all the Addition, Subtraction, etc. classes that contain the methods with the actual code to do the calculations. <br><br>
 	<a href="https://github.com/tlr24/calc_project/blob/main/calculator/history/calculations.py">Calculations.py</a>: <img src="{{ url_for('static', filename='images/abstractCalculations.jpg') }}" alt="abstractCalculations" class="center" style="width:100%;"><br>
 	<a href="https://github.com/tlr24/calc_project/blob/main/calculator/operations/addition.py">Addition.py</a>: <img src="{{ url_for('static', filename='images/addition.py.jpg') }}" alt="addition.py" class="center" style="width:100%;"><br>
